src/test/deca/codegen/extension/invalid/oracle/TAB_init_zero.deca
{
    int[] a = new int[5];
    5 % a[0];
}